--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dark-Kings.github.io/3d_shirt_coustomize",
+  "homepage": "http://dark-Kings.github.io/3d_projecte",
   "name": "3d-aishirt",
   "private": true,
   "version": "0.0.0",
